testdata/baselines/reference/submodule/compiler/requireOfJsonFileWithErrors.errors.txt
file1.ts(1,21): error TS2307: Cannot find module './b.json' or its corresponding type declarations.
file1.ts(3,21): error TS2307: Cannot find module './b.json' or its corresponding type declarations.


==== file1.ts (2 errors) ====
    import b1 = require('./b.json');
                        ~~~~~~~~~~
!!! error TS2307: Cannot find module './b.json' or its corresponding type declarations.
    let x = b1.a;
    import b2 = require('./b.json');
                        ~~~~~~~~~~
!!! error TS2307: Cannot find module './b.json' or its corresponding type declarations.
    if (x) {
        let b = b2.b;
        x = (b1.b === b);
    }
    
==== b.json (0 errors) ====
    {
        'a': true,
        "b": "hello"
    }